# sudoku-zk-snarks

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  sudoku_gadget.hpp  sudoku_snark.cpp  sudoku_snark.hpp
